--- a/inicio.html
+++ b/inicio.html
@@ -8,10 +8,9 @@
     <title>Metalized</title>
 </head>
 <body>
-    <!---<header>
+    <header>
         <h1>Metalized</h1>
-        <img src="calavera paso 15.png"> 
-    </header>-->
+    </header>
     <main>
         <div class="formulario">
             <form action="inicio.php" method="post">
@@ -20,11 +19,13 @@
                 <input class="password" type="password" name="contraseña" placeholder="Contraseña" required>
                 <button type="submit">Registrarse</button>
             </form>
-            <!---<p>Si ya tenes una cuenta ingresá <a href="login.html">acá</a></p>--> 
+            <p>Si ya tenes una cuenta ingresá <a href="login.html">acá</a></p>
         </div>
-        <!---<div class="oracion">
+        
+        <div class="fotoytexto">
+            <img src="calavera paso 15.png"> 
             <h2>Registrate<br>y empezá a escuchar<br>tu música preferida!</h2>
-        </div>--> 
+        </div>
     </main>
 </body>
 </html>
