nuevos divs metalized.html

--- a/metalized.html
+++ b/metalized.html
@@ -33,8 +33,13 @@
         <section id="contenedor2">
             <div class="barra_horizontal">
                 <h2>Inicio</h2>
-                <p>Metalized</p>
-                <img src="calavera paso 15.png">
+                <div class="nyl">
+                    <h3>Metalized</h3>
+                    <img src="calavera paso 15.png">
+                </div>
+                <div class="barraBusq">
+                    <h3>Buscar</h3>
+                </div>
             </div>
             <div class="inicio">
                 <h3>Escuchado Recientemente</h3>
@@ -54,5 +59,6 @@
             <img src="barra.png">
         </div>
     </footer>
+
 </body>
 </html> 
