--- a/metalized.html
+++ b/metalized.html
@@ -8,12 +8,13 @@
     <title>Metalized</title>
 </head>
 <body>
-    <main>
+    <header>
         <section id="contenedor1">
             <div class="seccionUsuario">
                 <img src="ftPerfil.jpg" >
                 <h2>Username</h2>
             </div>
+
             <div class="menu">
                 <ul>
                     <li>Inicio</li>
@@ -29,7 +30,9 @@
                 </ul>
             </div>
         </section>
+    </header>
 
+    <main>
         <section id="contenedor2">
             <div class="barra_horizontal">
                 <h2>Inicio</h2>
