--- a/inicio.html
+++ b/inicio.html
@@ -8,33 +8,39 @@
     <title>Metalized</title>
 </head>
 <body>
-    <header>
-        <h1>Metalized</h1>
-    </header>
+    <div class=".logo-contenedor">
+        <img src="tu-logo.png" alt="Logo" class="logo">
+    </div>
 
-    <main>
-        <div id="bienvenida">
-            <h2>Bienvenido!</h1>
-            <p>Acá encontrarás tu música favorita. 
-            <br>Un reproductor exclusivamente de rock, metal y sus subgéneros<br>
-            Registrate y empezá a escuchar</p>
-        </div>
+    <div class="contenedor">
+        <header>
+            <h1>Metalized</h1>
+        </header>
 
-        <section class="contenedor">
-            <div class="formulario">
-                <form action="inicio.php" method="post">
-                    <input class="username" type="text" name="nombreUser" placeholder="Nombre de Usuario" required>
-                    <input class="email" type="email" name="email" placeholder="Email" required>
-                    <input class="password" type="password" name="contraseña" placeholder="Contraseña" required>
-                    <button type="submit">Registrarse</button>
-                </form>
-                <p>Si ya tenes una cuenta ingresá <a href="login.html">acá</a></p>
+        <main>
+            <div id="bienvenida">
+                <h2>Bienvenido!</h1>
+                <p>Acá encontrarás tu música favorita. 
+                <br>Un reproductor exclusivamente de rock, metal y sus subgéneros<br>
+                Registrate y empezá a escuchar</p>
             </div>
-        </section>
 
-        <sectiom id="logo">
+            <section class="contenedor">
+                <div class="formulario">
+                    <form action="inicio.php" method="post">
+                        <input class="username" type="text" name="nombreUser" placeholder="Nombre de Usuario" required>
+                        <input class="email" type="email" name="email" placeholder="Email" required>
+                        <input class="password" type="password" name="contraseña" placeholder="Contraseña" required>
+                        <button type="submit">Registrarse</button>
+                    </form>
+                    <p>Si ya tenes una cuenta ingresá <a href="login.html">acá</a></p>
+                </div>
+            </section>
+
+            <sectiom id="logo">
                 <img src="calavera paso 15.png"> 
-        </div>
-    </main>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
