añadiendo logo inicio.html

--- a/inicio.html
+++ b/inicio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class=".logo-contenedor">
-        <img src="tu-logo.png" alt="Logo" class="logo">
+        <img src="calavera paso 15.png" alt="Logo" class="logo">
     </div>
 
     <div class="contenedor">
