--- a/metalized.html
+++ b/metalized.html
@@ -33,8 +33,6 @@
     </header>
 
     <main>
-        <section id="contenedor2">
-            
             <div class="barra_horizontal">
                 <h2>Inicio</h2>
                 <div class="nyl">
@@ -83,10 +81,22 @@
                         <p>Apetite For</p>
                     </div>
                 </section>
-                
-            </div>
 
-        </section>
+                <section id="artistas">
+                    <div class="contenedorArtista">
+                        <img src="metallica.png">
+                        <p>Metallica</p>
+                    </div>
+                    <div class="contenedorArtista">
+                        <img src="kiss.jpg">
+                        <p>Kiss</p>
+                    </div>
+                    <div class="contenedorArtista">
+                        <img src="soad.jpg">
+                        <p>S.O.A.D</p>
+                    </div>
+                </section>
+            </div>
     </main>
 
     <footer>
