--- a/metalized.html
+++ b/metalized.html
@@ -34,11 +34,15 @@
 
     <main>
             <div class="barra_horizontal">
-                <h2>Inicio</h2>
+                <div class="solapa">
+                    <h2>Inicio</h2>
+                </div>
+
                 <div class="nyl">
                     <h3>Metalized</h3>
                     <img src="calavera paso 15.png">
                 </div>
+
                 <div class="barraBusq">
                     <h3>Buscar</h3>
                 </div>
@@ -111,6 +115,5 @@
             <img src="barra.png">
         </div>
     </footer>
-
 </body>
 </html> 
