--- a/metalized.html
+++ b/metalized.html
@@ -7,7 +7,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap');
     </style>
-    <link rel="icon" type="image/png" href="calavera paso 15.png">
+    <link rel="icon" type="image/png" href="calavera.png">
     <link rel="stylesheet" href="metalized.css" type="text/css"/>
     <title>Metalized</title>
 </head>
@@ -45,7 +45,7 @@
 
                 <div class="nyl">
                     <h3>Metalized</h3>
-                    <img src="calavera paso 15.png">
+                    <img src="calavera.png">
                 </div>
 
                 <div class="barraBusq">
@@ -73,7 +73,7 @@
                     </div>
                     <div class="contenedorAlbum">
                         <img src="deathlockAlbum.png">
-                        <p>Deathlock</p>
+                        <p>Dethlock</p>
                     </div>
                     <div class="contenedorAlbum">
                         <img src="vdop-pantera.jpeg">
@@ -105,6 +105,10 @@
                     <div class="contenedorArtista">
                         <img src="soad.jpg">
                         <p>S.O.A.D</p>
+                    </div>
+                    <div class="contenedorArtista">
+                        <img src="sodastereo.jpg">
+                        <p>Soda Stereo</p>
                     </div>
                 </section>
             </div>
