modificacion en items del menu

--- a/metalized.html
+++ b/metalized.html
@@ -26,10 +26,11 @@
                     <li>Descubre</li>
                     <li>Mi libreria
                         <ul class="milibreria">
-                            <li>Canciones</li>
-                            <li>Artistas</li>
-                            <li>Albumes</li>
-                            <li>Favoritos</li>
+                            <li id="uno">Canciones</li>
+                            <li id="dos">Artistas</li>
+                            <li id="tres">Albumes</li>
+                            <li id="cuatro">Favoritos</li>
+                            <li id="cinco">Playlist</li>
                         </ul>
                     </li>
                 </ul>
