--- a/artistas.html
+++ b/artistas.html
@@ -8,7 +8,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap');
     </style>
     <link rel="icon" type="image/png" href="calavera.png">
-    <link rel="stylesheet" href="canciones.css" type="text/css"/>
+    <link rel="stylesheet" href="artistas.css" type="text/css"/>
     <title>Metalized</title>
 </head>
 
@@ -41,7 +41,7 @@
     <main>
             <div class="barra_horizontal">
                 <div class="solapa">
-                    <h1>Canciones</h1>
+                    <h1>Artistas</h1>
                 </div>
 
                 <div class="nyl">
@@ -56,38 +56,33 @@
                 </div>
             </div>
         
-            <div id="canciones">
+            <div id="artistas">
                     <section id="populares">
                         <div class="descripcion">
                             <h2>Popular</h2>
                             <h3>Mostrar todo</h3>
                         </div>
 
-                        <div class="divCancion">
-                            <div class="contenedorCancion">
-                                <img src="lovegun.jpg">
-                                <p class="titulo">Love Gun</p>
-                                <p class="artista">Kiss</p>
+                        <div class="divArtista">
+                            <div class="contenedorArtista">
+                                <img src="imagen.png">
+                                <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
-                                <img src="mopp.webp">
-                                <p class="titulo">Master of Puppets</p>
-                                <p class="artista">Metallica</p>
+                            <div class="contenedorArtista">
+                                <img src="imagen.png">
+                                <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
-                                <img src="hth.jpg">
-                                <p class="titulo">Highway to Hell</p>
-                                <p class="artista">ACDC</p>
+                            <div class="contenedorArtista">
+                                <img src="imagen.png">
+                                <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
-                                <img src="ilrnr.jpg">
-                                <p class="titulo">I love Rock n' Roll</p>
-                                <p class="artista">Joan Jett</p>
+                            <div class="contenedorArtista">
+                                <img src="imagen.png">
+                                <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
-                                <img src="inutero.jpg">
-                                <p class="titulo">In Utero</p>
-                                <p class="artista">Nirvana</p>
+                            <div class="contenedorArtista">
+                                <img src="imagen.png">
+                                <p class="artista">Megadeth</p>
                             </div> 
                         </div>
                     </section>
@@ -98,30 +93,25 @@
                             <h3>Mostrar todo</h3>
                         </div>
 
-                        <div class="divCancion">
-                            <div class="contenedorCancion">
+                        <div class="divArtista">
+                            <div class="contenedorArtista">
                                 <img src="imagen.png">
-                                <p class="titulo">Peace Sells</p>
                                 <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
+                            <div class="contenedorArtista">
                                 <img src="imagen.png">
-                                <p class="titulo">Peace Sells</p>
                                 <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
+                            <div class="contenedorArtista">
                                 <img src="imagen.png">
-                                <p class="titulo">Peace Sells</p>
                                 <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
+                            <div class="contenedorArtista">
                                 <img src="imagen.png">
-                                <p class="titulo">Peace Sells</p>
                                 <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
+                            <div class="contenedorArtista">
                                 <img src="imagen.png">
-                                <p class="titulo">Peace Sells</p>
                                 <p class="artista">Megadeth</p>
                             </div> 
                         </div>
@@ -133,30 +123,25 @@
                             <h3>Mostrar todo</h3>
                         </div>
 
-                        <div class="divCancion">
-                            <div class="contenedorCancion">
+                        <div class="divArtista">
+                            <div class="contenedorArtista">
                                 <img src="imagen.png">
-                                <p class="titulo">Peace Sells</p>
                                 <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
+                            <div class="contenedorArtista">
                                 <img src="imagen.png">
-                                <p class="titulo">Peace Sells</p>
                                 <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
+                            <div class="contenedorArtista">
                                 <img src="imagen.png">
-                                <p class="titulo">Peace Sells</p>
-                                <p class="artista">Megadeth</p>
-                            </div>
-                            <div class="contenedorCancion">
-                                <img src="imagen.png">
-                                <p class="titulo">Peace Sells</p>
                                 <p class="artista">Megadeth</p>
                             </div> 
-                            <div class="contenedorCancion">
+                            <div class="contenedorArtista">
                                 <img src="imagen.png">
-                                <p class="titulo">Peace Sells</p>
+                                <p class="artista">Megadeth</p>
+                            </div> 
+                            <div class="contenedorArtista">
+                                <img src="imagen.png">
                                 <p class="artista">Megadeth</p>
                             </div> 
                         </div>
