--- a/metalized.html
+++ b/metalized.html
@@ -22,15 +22,15 @@
 
             <div class="menu">
                 <ul>
-                    <li>Inicio</li>
-                    <li>Descubre</li>
+                    <li><a href="metalized.html">Inicio</a></li>
+                    <li><a href="descubre.html">Descubre</a></li>
                     <li>Mi libreria
                         <ul class="milibreria">
-                            <li id="uno">Canciones</li>
-                            <li id="dos">Artistas</li>
-                            <li id="tres">Albumes</li>
-                            <li id="cuatro">Favoritos</li>
-                            <li id="cinco">Playlist</li>
+                            <li id="uno"><a href="canciones.html">Canciones</a></li>
+                            <li id="dos"><a href="artistas.html">Artistas</a></li>
+                            <li id="tres"><a href="albumes.html">Albumes</a></li>
+                            <li id="cuatro"><a href="favoritos.html">Favoritos</a></li>
+                            <li id="cinco"><a href="playlists.html">Playlists</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -135,6 +135,11 @@
                 <div class="progress">
                     <div class="progress-bar" style="width:75%;"></div>
                 </div> 
+            </div>
+        </section>
+    </footer>
+</body>
+</html> 
             </div>
         </section>
     </footer>
