--- a/metalized.html
+++ b/metalized.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap');
-    </style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        </style>
     <link rel="icon" type="image/png" href="calavera.png">
     <link rel="stylesheet" href="metalized.css" type="text/css"/>
     <title>Metalized</title>
@@ -56,7 +56,7 @@
                 </div>
             </div>
         
-            <div class="inicio">
+            <div id="inicio">
                 <h3>Escuchado Recientemente</h3>
 
                 <section id="albumes">
