--- a/canciones.html
+++ b/canciones.html
@@ -70,7 +70,7 @@
                                 <p class="artista">Kiss</p>
                             </div> 
                             <div class="contenedorCancion">
-                                <img src="mopp.webp">
+                                <img src="mopp.jpg">
                                 <p class="titulo">Master of Puppets</p>
                                 <p class="artista">Metallica</p>
                             </div> 
