--- a/inicio.html
+++ b/inicio.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="calavera paso 15.png">
-    <link rel="stylesheet" href="inicio.css" type="text/css"/>
+    <link rel="stylesheet" href="inicioo.css" type="text/css"/>
     <title>Metalized</title>
 </head>
 <body>
-    <div class=".logo-contenedor">
-        <img src="calavera paso 15.png" alt="Logo" class="logo">
+    <div class="logo-contenedor">
+        <img src="calavera paso 15.png" alt="Logo" class="logoC">
     </div>
 
     <div class="contenedor">
@@ -37,7 +37,7 @@
                 </div>
             </section>
 
-            <sectiom id="logo">
+            <section id="logo">
                 <img src="calavera paso 15.png"> 
             </section>
         </main>
