--- a/artistas.html
+++ b/artistas.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
     
 <head>
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-        </style>
+    </style>
     <link rel="icon" type="image/png" href="calavera.png">
     <link rel="stylesheet" href="artistas.css" type="text/css"/>
     <title>Metalized</title>
