--- a/login.html
+++ b/login.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="calavera paso 15.png">
+    <link rel="icon" type="image/png" href="calavera.png">
     <link rel="stylesheet" href="login.css" type="text/css"/>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); </style>
     <title>Metalized</title>
 </head>
 <body>
@@ -16,12 +17,12 @@
             <form action="login.php" method="get">
                 <input class="username" type="text" name="nombreUser" placeholder="Nombre de Usuario" required>
                 <input class="password" type="password" name="contraseña" placeholder="Contraseña" required>
-                <button type="submit">Inicia sesion</button>
+                <button type="submit"><a href="metalized.php">Inicia sesion</a></button>
             </form>
         </div>
         
         <div class="fotoytexto">
-            <img src="calavera paso 15.png">
+            <img src="calavera.png">
         </div>
     </main>
 </body>
