--- a/inicio.html
+++ b/inicio.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="calavera paso 15.png">
-    <link rel="stylesheet" href="inicioo.css" type="text/css"/>
+    <link rel="icon" type="image/png" href="calavera.png">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); </style>
+    <link rel="stylesheet" href="inicio.css" type="text/css"/>
     <title>Metalized</title>
 </head>
 <body>
     <div class="logo-contenedor">
-        <img src="calavera paso 15.png" alt="Logo" class="logoC">
+        <img src="calavera.png" alt="Logo" class="logoC">
     </div>
 
     <div class="contenedor">
@@ -25,21 +26,30 @@
                 Registrate y empezá a escuchar</p>
             </div>
 
-            <section class="contenedor">
+            <section class="contenedor-form">
                 <div class="formulario">
                     <form action="inicio.php" method="post">
                         <input class="username" type="text" name="nombreUser" placeholder="Nombre de Usuario" required>
                         <input class="email" type="email" name="email" placeholder="Email" required>
                         <input class="password" type="password" name="contraseña" placeholder="Contraseña" required>
-                        <button type="submit">Registrarse</button>
+                        <button type="submit"><a href="metalized.php">Registrarse</a></button>
                     </form>
                     <p>Si ya tenes una cuenta ingresá <a href="login.html">acá</a></p>
                 </div>
             </section>
 
             <section id="logo">
-                <img src="calavera paso 15.png"> 
+                <img src="calavera.png"> 
             </section>
+
+            <script>
+                document.addEventListener('DOMContentLoaded', function() {
+                    const logoContainer = document.querySelector('.logo-contenedor');
+                    logoContainer.addEventListener('animationend', function() {
+                        logoContainer.classList.add('fade-out-complete'); 
+                    });
+                });
+            </script>
         </main>
     </div>
 </body>
