--- a/infoArtista.html
+++ b/infoArtista.html
@@ -72,38 +72,47 @@
                     </div>
                 </section>
 
-                <!---
                 <section class="canciones">
                     <h1>Populares</h1>
 
                     <div class="cancion">
-                        <img src="">
-                        <h3> Master of Puppets</h3>
-                        <h3> 08:05 </h3>
+                        <img src="mopp.jpg">
+                        <div class="info-popular">
+                            <h3 class="titulo"> Master of Puppets</h3>
+                            <h3 class="duracion"> 08:05 </h3>
+                        </div>
                     </div>
                     <div class="cancion">
-                        <img src="">
-                        <h3> Master of Puppets</h3>
-                        <h3> 08:05 </h3>
+                        <img src="mopp.jpg">
+                        <div class="info-popular">
+                            <h3 class="titulo"> Master of Puppets</h3>
+                            <h3 class="duracion"> 08:05 </h3>
+                        </div>
                     </div>
                     <div class="cancion">
-                        <img src="">
-                        <h3> Master of Puppets</h3>
-                        <h3> 08:05 </h3>
+                        <img src="mopp.jpg">
+                        <div class="info-popular">
+                            <h3 class="titulo"> Master of Puppets</h3>
+                            <h3 class="duracion"> 08:05 </h3>
+                        </div>
                     </div>
                     <div class="cancion">
-                        <img src="">
-                        <h3> Master of Puppets</h3>
-                        <h3> 08:05 </h3>
+                        <img src="mopp.jpg">
+                        <div class="info-popular">
+                            <h3 class="titulo"> Master of Puppets</h3>
+                            <h3 class="duracion"> 08:05 </h3>
+                        </div>
                     </div>
                     <div class="cancion">
-                        <img src="">
-                        <h3> Master of Puppets</h3>
-                        <h3> 08:05 </h3>
+                        <img src="mopp.jpg">
+                        <div class="info-popular">
+                            <h3 class="titulo"> Master of Puppets</h3>
+                            <h3 class="duracion"> 08:05 </h3>
+                        </div>
                     </div>
                 
                 </section>
-                -->
+
             
             </div>
     </main>
