--- a/infoArtista.html
+++ b/infoArtista.html
@@ -34,8 +34,6 @@
                             <li id="uno"><a href="canciones.php">Canciones</a></li>
                             <li id="dos"><a href="artistas.php">Artistas</a></li>
                             <li id="tres"><a href="albumes.php">Albumes</a></li>
-                            <li id="cuatro"><a href="favoritos.php">Favoritos</a></li>
-                            <li id="cinco"><a href="playlists.php ">Playlists</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -81,38 +79,38 @@
                     <section id="canciones">
                         <h1>Populares</h1>
         
-                            <div id="cancion">
+                        <div class="cancion">
+                            <img src="mopp.jpg">
+                            <div class="info-popular">
+                                <h3 class="tituloC"> Master of Puppets</h3>
+                                <h3 class="duracion"> 08:05 </h3>
+                            </div>
+                        </div>
+                            <div class="cancion">
                                 <img src="mopp.jpg">
                                 <div class="info-popular">
-                                    <h3 class="titulo"> Master of Puppets</h3>
+                                    <h3 class="tituloC"> Master of Puppets</h3>
                                     <h3 class="duracion"> 08:05 </h3>
                                 </div>
                             </div>
-                            <div id="cancion">
+                            <div class="cancion">
                                 <img src="mopp.jpg">
                                 <div class="info-popular">
-                                    <h3 class="titulo"> Master of Puppets</h3>
+                                    <h3 class="tituloC"> Master of Puppets</h3>
                                     <h3 class="duracion"> 08:05 </h3>
                                 </div>
                             </div>
-                            <div id="cancion">
+                            <div class="cancion">
                                 <img src="mopp.jpg">
                                 <div class="info-popular">
-                                    <h3 class="titulo"> Master of Puppets</h3>
+                                    <h3 class="tituloC"> Master of Puppets</h3>
                                     <h3 class="duracion"> 08:05 </h3>
                                 </div>
                             </div>
-                            <div id="cancion">
+                            <div class="cancion">
                                 <img src="mopp.jpg">
                                 <div class="info-popular">
-                                    <h3 class="titulo"> Master of Puppets</h3>
-                                    <h3 class="duracion"> 08:05 </h3>
-                                </div>
-                            </div>
-                            <div id="cancion">
-                                <img src="mopp.jpg">
-                                <div class="info-popular">
-                                    <h3 class="titulo"> Master of Puppets</h3>
+                                    <h3 class="tituloC"> Master of Puppets</h3>
                                     <h3 class="duracion"> 08:05 </h3>
                                 </div>
                             </div>
@@ -121,11 +119,19 @@
                     <section id="albumes">
                         <h1>Albumes</h1>
                             <section id="gridAlbums">
-                                <div id="album">
+                                <div class="album">
                                     <img src="mopp.jpg">
                                     <h3 class="titulo"> Master of Puppets</h3>
                                 </div>
-                                <div id="album">
+                                <div class="album">
+                                    <img src="mopp.jpg">
+                                    <h3 class="titulo"> Master of Puppets</h3>
+                                </div>
+                                <div class="album">
+                                    <img src="mopp.jpg">
+                                    <h3 class="titulo"> Master of Puppets</h3>
+                                </div>
+                                <div class="album">
                                     <img src="mopp.jpg">
                                     <h3 class="titulo"> Master of Puppets</h3>
                                 </div>
