--- a/artistas-cc.html
+++ b/artistas-cc.html
@@ -75,7 +75,9 @@
                     <section class="seccionBoton">
                         <button class="prev" onclick="changeSlide(this, -1)">&#10094;</button>
                     </section>
-                    <div class="slides"></div>
+                    <div class="slides">
+                        
+                    </div>
                     <section class="seccionBoton">
                         <button class="next" onclick="changeSlide(this, 1)">&#10095;</button>
                     </section>
@@ -92,7 +94,12 @@
                     <section class="seccionBoton">
                         <button class="prev" onclick="changeSlide(this, -1)">&#10094;</button>
                     </section>
-                    <div class="slides"></div>
+                    <div class="slides">
+                        <div class="slide">
+                            <img src= /**/ />
+                            <h3> <!-----> </h3>
+                        </div>
+                    </div>
                     <section class="seccionBoton">
                         <button class="next" onclick="changeSlide(this, 1)">&#10095;</button>
                     </section>
