--- a/inicio.html
+++ b/inicio.html
@@ -20,7 +20,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); 
     </style>
     <link rel="stylesheet" href="inicio.css" type="text/css"/>
-    <title>Metalized</title>
+    <title>Registrate - Metalized</title>
 </head>
 <body>
     <div class="logo-contenedor">
@@ -38,11 +38,11 @@
                 
             <section class="form">
                 <div class="formulario">
-                    <form action="inicio.php" method="post">
+                    <form action="./inicio.php" method="post">
                     <input class="username" type="text" name="nombreUser" placeholder="Nombre de Usuario" required>
                     <input class="email" type="email" name="email" placeholder="Email" required>  
                     <input class="password" type="password" name="contraseña" placeholder="Contraseña" required>
-                    <button type="submit"><a href="metalized.php">Registrarse</a></button>
+                    <button type="submit">Registrarse</button>
                 </form>
                 </div>
                 <p>Si ya tenes una cuenta ingresá <a href="login.html">acá</a></p>
