--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                 
             <section class="form">
                 <div class="formulario">
-                    <form action="./inicio.php" method="post">
+                    <form action="./login.php" method="post">
                     <input class="username" type="text" name="nombreUser" placeholder="Nombre de Usuario" required>
                     <input class="password" type="password" name="contraseña" placeholder="Contraseña" required>
                     <button type="submit">Iniciar Sesion</button>
