--- a/login.html
+++ b/login.html
@@ -5,21 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="calavera.png">
     <style>
-    
-    @font-face {
-        font-family: 'Deicide Remain';
-        src: url('IPM/metalized/Deicide-Remain.woff') format('woff');
-        font-weight: normal;
-        font-style: normal;
-    }
-    header h1 {
-        font-size: 20px;
-        font-family: 'Deicide Remain', sans-serif;
-            }
-
     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); 
     </style>
-    <link rel="stylesheet" href="inicio.css" type="text/css"/>
+    <link rel="stylesheet" href="login.css" type="text/css"/>
     <title>Login - Metalized</title>
 </head>
 <body>
