--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                     <button type="submit">Iniciar Sesion</button>
                 </form>
                 </div>
-                <p>Si no tenes una cuenta registrate <a href="inicio.html">acá</a></p>
+                <p>Si no tenes una cuenta registrate <a href="index.html">acá</a></p>
             </section>
     
             <div id="logo">
